--- a/spec/fixtures/cassettes/authenticate.yml
+++ b/spec/fixtures/cassettes/authenticate.yml
@@ -17,63 +17,104 @@ http_interactions:
       - Ruby
   response:
     status:
-      code: 401
-      message: Unauthorized
-    headers:
-      Content-Type:
-      - application/json
-      X-Error-Detail:
-      - Invalid email or password.
-      Cache-Control:
-      - no-cache
-      X-Request-Id:
-      - 585b1576-d444-46b5-ba65-769f74c31c23
-      X-Runtime:
-      - '0.563626'
-      Content-Length:
-      - '40'
-    body:
-      encoding: UTF-8
-      string: '{"message":"Invalid email or password."}'
-    http_version: 
-  recorded_at: Sat, 16 Jan 2016 23:10:25 GMT
-- request:
-    method: post
-    uri: http://localhost:3000/locomotive/api/v3/my_account.json
-    body:
-      encoding: UTF-8
-      string: account%5Bemail%5D=john%40doe.net&account%5Bname%5D=John&account%5Bpassword%5D=asimplepassword
-    headers:
-      Accept:
-      - application/json
-      Content-Type:
-      - application/x-www-form-urlencoded
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      User-Agent:
-      - Ruby
-  response:
-    status:
       code: 201
       message: Created
     headers:
       Content-Type:
       - application/json
       Etag:
-      - W/"068d0ca64afd07ad1a18998dd22d1786"
+      - W/"bc2668dfce49ce8b86c24c5238a6ad8a"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 36c08f2b-6675-44bb-aac0-c5bc15a702ca
+      - ac82d4d7-0fab-42e5-b204-e7b3aeb1dc0c
       X-Runtime:
-      - '0.084403'
+      - '0.538828'
+      Content-Length:
+      - '32'
+    body:
+      encoding: UTF-8
+      string: '{"token":"4UbNL-FP8WQsnonBusPw"}'
+    http_version: 
+  recorded_at: Tue, 16 Feb 2016 00:46:20 GMT
+- request:
+    method: get
+    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=4UbNL-FP8WQsnonBusPw
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept:
+      - application/json
+      X-Locomotive-Account-Email:
+      - john@doe.net
+      X-Locomotive-Account-Token:
+      - 4UbNL-FP8WQsnonBusPw
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Content-Type:
+      - application/json
+      Etag:
+      - W/"1fede7cbfdb8717942bf763b9ce2c37d"
+      Cache-Control:
+      - max-age=0, private, must-revalidate
+      X-Request-Id:
+      - 89d151cf-949c-43e4-857e-e35e27388fda
+      X-Runtime:
+      - '0.063627'
       Content-Length:
       - '250'
     body:
       encoding: UTF-8
-      string: '{"_id":"569acde1c3651121bb000000","created_at":"2016-01-16T23:10:25Z","updated_at":"2016-01-16T23:10:25Z","name":"John","email":"john@doe.net","locale":"en","api_key":"2ce9ab5c3bf6986eab28ce4413580192b8c36c0b","super_admin":false,"local_admin":false}'
+      string: '{"_id":"56c265bdc365114365000000","created_at":"2016-02-15T23:56:45Z","updated_at":"2016-02-15T23:56:45Z","name":"John","email":"john@doe.net","locale":"en","api_key":"69f81710e41bd4fe8693d0447a31e7bfcf07d8d7","super_admin":false,"local_admin":false}'
     http_version: 
-  recorded_at: Sat, 16 Jan 2016 23:10:25 GMT
+  recorded_at: Tue, 16 Feb 2016 00:46:20 GMT
+- request:
+    method: get
+    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=4UbNL-FP8WQsnonBusPw
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept:
+      - application/json
+      X-Locomotive-Account-Email:
+      - john@doe.net
+      X-Locomotive-Account-Token:
+      - 4UbNL-FP8WQsnonBusPw
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Content-Type:
+      - application/json
+      Etag:
+      - W/"1fede7cbfdb8717942bf763b9ce2c37d"
+      Cache-Control:
+      - max-age=0, private, must-revalidate
+      X-Request-Id:
+      - 4b88417d-24af-40e4-a6b3-3211ce98e6cf
+      X-Runtime:
+      - '0.020165'
+      Content-Length:
+      - '250'
+    body:
+      encoding: UTF-8
+      string: '{"_id":"56c265bdc365114365000000","created_at":"2016-02-15T23:56:45Z","updated_at":"2016-02-15T23:56:45Z","name":"John","email":"john@doe.net","locale":"en","api_key":"69f81710e41bd4fe8693d0447a31e7bfcf07d8d7","super_admin":false,"local_admin":false}'
+    http_version: 
+  recorded_at: Tue, 16 Feb 2016 00:46:21 GMT
 - request:
     method: post
     uri: http://localhost:3000/locomotive/api/v3/tokens.json
@@ -97,23 +138,23 @@ http_interactions:
       Content-Type:
       - application/json
       Etag:
-      - W/"e5bf42b7c935f3c18ddae07414fd42a4"
+      - W/"3cc699723ac44b6b16405f0c666c9bc3"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 82537a76-3b55-4c6a-a536-739c7314d36d
+      - e347d042-8a3a-4ee0-9126-4973edd50f4d
       X-Runtime:
-      - '0.017771'
+      - '0.021840'
       Content-Length:
       - '32'
     body:
       encoding: UTF-8
-      string: '{"token":"gWL44rqJvEqooM9RczSW"}'
+      string: '{"token":"C2t1wxAuKy7YPAHVva29"}'
     http_version: 
-  recorded_at: Sat, 16 Jan 2016 23:10:25 GMT
+  recorded_at: Tue, 16 Feb 2016 00:46:21 GMT
 - request:
     method: get
-    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=gWL44rqJvEqooM9RczSW
+    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=C2t1wxAuKy7YPAHVva29
     body:
       encoding: US-ASCII
       string: ''
@@ -123,7 +164,7 @@ http_interactions:
       X-Locomotive-Account-Email:
       - admin@locomotivecms.com
       X-Locomotive-Account-Token:
-      - gWL44rqJvEqooM9RczSW
+      - C2t1wxAuKy7YPAHVva29
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       User-Agent:
@@ -136,23 +177,23 @@ http_interactions:
       Content-Type:
       - application/json
       Etag:
-      - W/"23efaf347eb8d4c795a5a4db30ff339c"
+      - W/"6dc03a13985e38bbf77d96a5b9803c04"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - fbefeb2e-6b2d-4c5e-bbb0-81ac65da1bda
+      - 1217e1b0-1f5d-4ef1-b22b-af9a2cced709
       X-Runtime:
-      - '0.032607'
+      - '0.019349'
       Content-Length:
       - '261'
     body:
       encoding: UTF-8
-      string: '{"_id":"569acd6cc36511216f000000","created_at":"2016-01-16T23:08:28Z","updated_at":"2016-01-16T23:08:28Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
+      string: '{"_id":"56c25ac5c36511433f000000","created_at":"2016-02-15T23:09:57Z","updated_at":"2016-02-15T23:09:57Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
     http_version: 
-  recorded_at: Sat, 16 Jan 2016 23:10:25 GMT
+  recorded_at: Tue, 16 Feb 2016 00:46:21 GMT
 - request:
     method: get
-    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=gWL44rqJvEqooM9RczSW
+    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=C2t1wxAuKy7YPAHVva29
     body:
       encoding: US-ASCII
       string: ''
@@ -162,7 +203,7 @@ http_interactions:
       X-Locomotive-Account-Email:
       - admin@locomotivecms.com
       X-Locomotive-Account-Token:
-      - gWL44rqJvEqooM9RczSW
+      - C2t1wxAuKy7YPAHVva29
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       User-Agent:
@@ -175,18 +216,18 @@ http_interactions:
       Content-Type:
       - application/json
       Etag:
-      - W/"23efaf347eb8d4c795a5a4db30ff339c"
+      - W/"6dc03a13985e38bbf77d96a5b9803c04"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 2e1a0de0-d453-4297-9997-49858aa1f746
+      - 92680a0a-6313-4a81-990c-f2d0d158fee5
       X-Runtime:
-      - '0.019324'
+      - '0.019043'
       Content-Length:
       - '261'
     body:
       encoding: UTF-8
-      string: '{"_id":"569acd6cc36511216f000000","created_at":"2016-01-16T23:08:28Z","updated_at":"2016-01-16T23:08:28Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
+      string: '{"_id":"56c25ac5c36511433f000000","created_at":"2016-02-15T23:09:57Z","updated_at":"2016-02-15T23:09:57Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
     http_version: 
-  recorded_at: Sat, 16 Jan 2016 23:10:25 GMT
+  recorded_at: Tue, 16 Feb 2016 00:46:21 GMT
 recorded_with: VCR 3.0.0
