--- a/spec/fixtures/cassettes/authenticate.yml
+++ b/spec/fixtures/cassettes/authenticate.yml
@@ -8,13 +8,13 @@ http_interactions:
       string: email=john%40doe.net&password=asimplepassword
     headers:
       User-Agent:
-      - HTTPClient/1.0 (2.7.1, ruby 2.2.3 (2015-08-18))
+      - HTTPClient/1.0 (2.7.2, ruby 2.2.3 (2015-08-18))
       Accept:
       - application/json
       Accept-Encoding:
       - gzip,deflate
       Date:
-      - Mon, 21 Mar 2016 17:36:40 GMT
+      - Wed, 01 Jun 2016 14:46:03 GMT
       Content-Type:
       - application/x-www-form-urlencoded
   response:
@@ -29,16 +29,16 @@ http_interactions:
       Cache-Control:
       - no-cache
       X-Request-Id:
-      - f97c50d2-f8ae-4fd8-bce0-3b623afae5f3
+      - 3182cf9c-b696-43e7-b8c1-1ba14499af20
       X-Runtime:
-      - '0.448075'
+      - '0.414173'
       Content-Length:
       - '40'
     body:
       encoding: UTF-8
       string: '{"message":"Invalid email or password."}'
     http_version: 
-  recorded_at: Mon, 21 Mar 2016 17:36:41 GMT
+  recorded_at: Wed, 01 Jun 2016 14:46:03 GMT
 - request:
     method: post
     uri: http://localhost:3000/locomotive/api/v3/my_account.json
@@ -47,13 +47,13 @@ http_interactions:
       string: account%5Bemail%5D=john%40doe.net&account%5Bname%5D=John&account%5Bpassword%5D=asimplepassword
     headers:
       User-Agent:
-      - HTTPClient/1.0 (2.7.1, ruby 2.2.3 (2015-08-18))
+      - HTTPClient/1.0 (2.7.2, ruby 2.2.3 (2015-08-18))
       Accept:
       - application/json
       Accept-Encoding:
       - gzip,deflate
       Date:
-      - Mon, 21 Mar 2016 17:36:41 GMT
+      - Wed, 01 Jun 2016 14:46:03 GMT
       Content-Type:
       - application/x-www-form-urlencoded
   response:
@@ -64,20 +64,20 @@ http_interactions:
       Content-Type:
       - application/json
       Etag:
-      - W/"13d961357bc8b2ce65f4f13ee8adba85"
+      - W/"6e006fe508a944d2de94eb6b19534b34"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - a3c557e9-41e9-44dc-ae1d-91af5ddd3b96
+      - a315281f-7abc-4abd-9f84-f15fec715f5d
       X-Runtime:
-      - '0.098826'
+      - '0.089469'
       Content-Length:
       - '250'
     body:
       encoding: UTF-8
-      string: '{"_id":"56f03129c36511207342cbcb","created_at":"2016-03-21T17:36:41Z","updated_at":"2016-03-21T17:36:41Z","name":"John","email":"john@doe.net","locale":"en","api_key":"901baf472a28a8e3a6a871255c90b232de964686","super_admin":false,"local_admin":false}'
+      string: '{"_id":"574ef52b87f6437126b45fd5","created_at":"2016-06-01T14:46:03Z","updated_at":"2016-06-01T14:46:03Z","name":"John","email":"john@doe.net","locale":"en","api_key":"0ca43a03c721f17ce93273a52ae945c60d96f435","super_admin":false,"local_admin":false}'
     http_version: 
-  recorded_at: Mon, 21 Mar 2016 17:36:41 GMT
+  recorded_at: Wed, 01 Jun 2016 14:46:03 GMT
 - request:
     method: post
     uri: http://localhost:3000/locomotive/api/v3/tokens.json
@@ -86,13 +86,13 @@ http_interactions:
       string: email=admin%40locomotivecms.com&password=locomotive
     headers:
       User-Agent:
-      - HTTPClient/1.0 (2.7.1, ruby 2.2.3 (2015-08-18))
+      - HTTPClient/1.0 (2.7.2, ruby 2.2.3 (2015-08-18))
       Accept:
       - application/json
       Accept-Encoding:
       - gzip,deflate
       Date:
-      - Mon, 21 Mar 2016 17:36:41 GMT
+      - Wed, 01 Jun 2016 14:46:03 GMT
       Content-Type:
       - application/x-www-form-urlencoded
   response:
@@ -103,39 +103,39 @@ http_interactions:
       Content-Type:
       - application/json
       Etag:
-      - W/"3cfd61d41b23cdfb3d8833133c136131"
+      - W/"d3c6e9d62f8b5b88948877604a6e90f1"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 805ec3c4-ce19-4edb-bd06-6b499447f2a1
+      - 9c0dacd7-f95d-4f40-8de1-0951604a3e51
       X-Runtime:
-      - '0.016118'
+      - '0.019179'
       Content-Length:
       - '32'
     body:
       encoding: UTF-8
-      string: '{"token":"V8VMCfCsp7XzQLvAd1AY"}'
+      string: '{"token":"e72VhSTyGX_RnZqXeEeZ"}'
     http_version: 
-  recorded_at: Mon, 21 Mar 2016 17:36:41 GMT
+  recorded_at: Wed, 01 Jun 2016 14:46:03 GMT
 - request:
     method: get
-    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=V8VMCfCsp7XzQLvAd1AY
+    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=e72VhSTyGX_RnZqXeEeZ
     body:
       encoding: UTF-8
       string: ''
     headers:
       User-Agent:
-      - HTTPClient/1.0 (2.7.1, ruby 2.2.3 (2015-08-18))
+      - HTTPClient/1.0 (2.7.2, ruby 2.2.3 (2015-08-18))
       Accept:
       - application/json
       Accept-Encoding:
       - gzip,deflate
       Date:
-      - Mon, 21 Mar 2016 17:36:41 GMT
+      - Wed, 01 Jun 2016 14:46:03 GMT
       X-Locomotive-Account-Email:
       - admin@locomotivecms.com
       X-Locomotive-Account-Token:
-      - V8VMCfCsp7XzQLvAd1AY
+      - e72VhSTyGX_RnZqXeEeZ
   response:
     status:
       code: 200
@@ -144,39 +144,39 @@ http_interactions:
       Content-Type:
       - application/json
       Etag:
-      - W/"2ce6a3f4e073d2d83a53613d0139477e"
+      - W/"5a771efbaa5be98a7a15537b116e73fe"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - e4ca46c9-4c89-42db-9bdb-ca21e8adb1a9
+      - 56530494-10b2-44c7-bb2e-0fc537da0401
       X-Runtime:
-      - '0.029466'
+      - '0.033738'
       Content-Length:
       - '261'
     body:
       encoding: UTF-8
-      string: '{"_id":"56f03072c365112052cab389","created_at":"2016-03-21T17:33:38Z","updated_at":"2016-03-21T17:33:38Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
+      string: '{"_id":"574ef50787f6437102d102ac","created_at":"2016-06-01T14:45:27Z","updated_at":"2016-06-01T14:45:27Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
     http_version: 
-  recorded_at: Mon, 21 Mar 2016 17:36:41 GMT
+  recorded_at: Wed, 01 Jun 2016 14:46:03 GMT
 - request:
     method: get
-    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=V8VMCfCsp7XzQLvAd1AY
+    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=e72VhSTyGX_RnZqXeEeZ
     body:
       encoding: UTF-8
       string: ''
     headers:
       User-Agent:
-      - HTTPClient/1.0 (2.7.1, ruby 2.2.3 (2015-08-18))
+      - HTTPClient/1.0 (2.7.2, ruby 2.2.3 (2015-08-18))
       Accept:
       - application/json
       Accept-Encoding:
       - gzip,deflate
       Date:
-      - Mon, 21 Mar 2016 17:36:41 GMT
+      - Wed, 01 Jun 2016 14:46:03 GMT
       X-Locomotive-Account-Email:
       - admin@locomotivecms.com
       X-Locomotive-Account-Token:
-      - V8VMCfCsp7XzQLvAd1AY
+      - e72VhSTyGX_RnZqXeEeZ
   response:
     status:
       code: 200
@@ -185,18 +185,18 @@ http_interactions:
       Content-Type:
       - application/json
       Etag:
-      - W/"2ce6a3f4e073d2d83a53613d0139477e"
+      - W/"5a771efbaa5be98a7a15537b116e73fe"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 059e56ad-ec66-4fa7-98a4-85f7eb38746c
+      - 7e97334d-4ef4-4856-95a9-ca0b65206e3f
       X-Runtime:
-      - '0.019939'
+      - '0.017813'
       Content-Length:
       - '261'
     body:
       encoding: UTF-8
-      string: '{"_id":"56f03072c365112052cab389","created_at":"2016-03-21T17:33:38Z","updated_at":"2016-03-21T17:33:38Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
+      string: '{"_id":"574ef50787f6437102d102ac","created_at":"2016-06-01T14:45:27Z","updated_at":"2016-06-01T14:45:27Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
     http_version: 
-  recorded_at: Mon, 21 Mar 2016 17:36:41 GMT
-recorded_with: VCR 3.0.0
+  recorded_at: Wed, 01 Jun 2016 14:46:03 GMT
+recorded_with: VCR 3.0.1
