--- a/spec/fixtures/cassettes/authenticate.yml
+++ b/spec/fixtures/cassettes/authenticate.yml
@@ -14,7 +14,7 @@ http_interactions:
       Accept-Encoding:
       - gzip,deflate
       Date:
-      - Wed, 01 Jun 2016 14:46:03 GMT
+      - Fri, 17 Jun 2016 08:02:04 GMT
       Content-Type:
       - application/x-www-form-urlencoded
   response:
@@ -29,16 +29,16 @@ http_interactions:
       Cache-Control:
       - no-cache
       X-Request-Id:
-      - 3182cf9c-b696-43e7-b8c1-1ba14499af20
+      - b0c718fe-9812-411b-9824-367063c7c7c8
       X-Runtime:
-      - '0.414173'
+      - '0.641600'
       Content-Length:
       - '40'
     body:
       encoding: UTF-8
       string: '{"message":"Invalid email or password."}'
     http_version: 
-  recorded_at: Wed, 01 Jun 2016 14:46:03 GMT
+  recorded_at: Fri, 17 Jun 2016 08:02:05 GMT
 - request:
     method: post
     uri: http://localhost:3000/locomotive/api/v3/my_account.json
@@ -53,7 +53,7 @@ http_interactions:
       Accept-Encoding:
       - gzip,deflate
       Date:
-      - Wed, 01 Jun 2016 14:46:03 GMT
+      - Fri, 17 Jun 2016 08:02:05 GMT
       Content-Type:
       - application/x-www-form-urlencoded
   response:
@@ -64,20 +64,20 @@ http_interactions:
       Content-Type:
       - application/json
       Etag:
-      - W/"6e006fe508a944d2de94eb6b19534b34"
+      - W/"0e3f9d0daf88f8fd4f0a2ec082a5a7e5"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - a315281f-7abc-4abd-9f84-f15fec715f5d
+      - ca31d12a-1fbb-41c6-a7eb-f2f36de12f0b
       X-Runtime:
-      - '0.089469'
+      - '0.158071'
       Content-Length:
       - '250'
     body:
       encoding: UTF-8
-      string: '{"_id":"574ef52b87f6437126b45fd5","created_at":"2016-06-01T14:46:03Z","updated_at":"2016-06-01T14:46:03Z","name":"John","email":"john@doe.net","locale":"en","api_key":"0ca43a03c721f17ce93273a52ae945c60d96f435","super_admin":false,"local_admin":false}'
+      string: '{"_id":"5763ae7d87f6437d12223b7e","created_at":"2016-06-17T08:02:05Z","updated_at":"2016-06-17T08:02:05Z","name":"John","email":"john@doe.net","locale":"en","api_key":"f3d9eb1da9dd7d755bf61cb78040eb3ac20054b7","super_admin":false,"local_admin":false}'
     http_version: 
-  recorded_at: Wed, 01 Jun 2016 14:46:03 GMT
+  recorded_at: Fri, 17 Jun 2016 08:02:05 GMT
 - request:
     method: post
     uri: http://localhost:3000/locomotive/api/v3/tokens.json
@@ -92,7 +92,7 @@ http_interactions:
       Accept-Encoding:
       - gzip,deflate
       Date:
-      - Wed, 01 Jun 2016 14:46:03 GMT
+      - Fri, 17 Jun 2016 08:02:05 GMT
       Content-Type:
       - application/x-www-form-urlencoded
   response:
@@ -103,23 +103,23 @@ http_interactions:
       Content-Type:
       - application/json
       Etag:
-      - W/"d3c6e9d62f8b5b88948877604a6e90f1"
+      - W/"454972cc6e9c77359905d2dea5ba89ee"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 9c0dacd7-f95d-4f40-8de1-0951604a3e51
+      - cb777707-131e-4a7b-beff-040b267ac2c6
       X-Runtime:
-      - '0.019179'
+      - '0.022266'
       Content-Length:
       - '32'
     body:
       encoding: UTF-8
-      string: '{"token":"e72VhSTyGX_RnZqXeEeZ"}'
+      string: '{"token":"HyqKxyBLmEH9x_GzYnWY"}'
     http_version: 
-  recorded_at: Wed, 01 Jun 2016 14:46:03 GMT
+  recorded_at: Fri, 17 Jun 2016 08:02:05 GMT
 - request:
     method: get
-    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=e72VhSTyGX_RnZqXeEeZ
+    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=HyqKxyBLmEH9x_GzYnWY
     body:
       encoding: UTF-8
       string: ''
@@ -131,11 +131,11 @@ http_interactions:
       Accept-Encoding:
       - gzip,deflate
       Date:
-      - Wed, 01 Jun 2016 14:46:03 GMT
+      - Fri, 17 Jun 2016 08:02:05 GMT
       X-Locomotive-Account-Email:
       - admin@locomotivecms.com
       X-Locomotive-Account-Token:
-      - e72VhSTyGX_RnZqXeEeZ
+      - HyqKxyBLmEH9x_GzYnWY
   response:
     status:
       code: 200
@@ -144,23 +144,23 @@ http_interactions:
       Content-Type:
       - application/json
       Etag:
-      - W/"5a771efbaa5be98a7a15537b116e73fe"
+      - W/"7560269880972609752ff82cb3ed592f"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 56530494-10b2-44c7-bb2e-0fc537da0401
+      - 4fab7136-9216-46fb-a2ce-f25e5b40ca17
       X-Runtime:
-      - '0.033738'
+      - '0.037894'
       Content-Length:
       - '261'
     body:
       encoding: UTF-8
-      string: '{"_id":"574ef50787f6437102d102ac","created_at":"2016-06-01T14:45:27Z","updated_at":"2016-06-01T14:45:27Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
+      string: '{"_id":"5763ad8487f6437cec5812c1","created_at":"2016-06-17T07:57:56Z","updated_at":"2016-06-17T07:57:56Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
     http_version: 
-  recorded_at: Wed, 01 Jun 2016 14:46:03 GMT
+  recorded_at: Fri, 17 Jun 2016 08:02:05 GMT
 - request:
     method: get
-    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=e72VhSTyGX_RnZqXeEeZ
+    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=HyqKxyBLmEH9x_GzYnWY
     body:
       encoding: UTF-8
       string: ''
@@ -172,11 +172,11 @@ http_interactions:
       Accept-Encoding:
       - gzip,deflate
       Date:
-      - Wed, 01 Jun 2016 14:46:03 GMT
+      - Fri, 17 Jun 2016 08:02:05 GMT
       X-Locomotive-Account-Email:
       - admin@locomotivecms.com
       X-Locomotive-Account-Token:
-      - e72VhSTyGX_RnZqXeEeZ
+      - HyqKxyBLmEH9x_GzYnWY
   response:
     status:
       code: 200
@@ -185,18 +185,18 @@ http_interactions:
       Content-Type:
       - application/json
       Etag:
-      - W/"5a771efbaa5be98a7a15537b116e73fe"
+      - W/"7560269880972609752ff82cb3ed592f"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 7e97334d-4ef4-4856-95a9-ca0b65206e3f
+      - ad034495-4fa7-42ab-9176-e24422eef3ff
       X-Runtime:
-      - '0.017813'
+      - '0.025608'
       Content-Length:
       - '261'
     body:
       encoding: UTF-8
-      string: '{"_id":"574ef50787f6437102d102ac","created_at":"2016-06-01T14:45:27Z","updated_at":"2016-06-01T14:45:27Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
+      string: '{"_id":"5763ad8487f6437cec5812c1","created_at":"2016-06-17T07:57:56Z","updated_at":"2016-06-17T07:57:56Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
     http_version: 
-  recorded_at: Wed, 01 Jun 2016 14:46:03 GMT
+  recorded_at: Fri, 17 Jun 2016 08:02:05 GMT
 recorded_with: VCR 3.0.1
